@startuml
left to right direction
set separator none
!pragma useIntermediatePackages false
skin rose
package cl.ucn.disc.pa.beattherhythm{
    package model{
        class ListaInstrumento{
            -cantidadActual: int
            -cantidadMaxima: int
            -arregloInstrumento: Instrumento[]
            +ListaInstrumento(cantidadMaxima: int)
            +getCantidadActual()
            +getCantidadMaxima()
            +agregar(instrumento: Instrumento): void
            getInstrumento(posicion: int): Instrumento
        }

        class InstrumentoCuerda{
            -tipoDeCuerda: String
            -numeroDeCuerdas: int
            -tipo: String
            +Instrumento(nombreInstrumento: String, tipoDeCuerda: String, numeroDeCuerdas: int, materialDeConstruccion: String, tipo: String, codigo: String, precio: int, stock: int)
            +getTipoDeCuerda(): String
            +getNumeroDeCuerdas(): int
            +getTipo(): String
        }

        class InstrumentoPercusion{
            -tipoDePercusion: String
            -altura: double
            +InstrumentoPercusion(nombreInstrumento: String, tipoDePercusion: String, materialDeConstruccion: String, altura: double, codigo: String, precio: int, stock: int)
            +getTipoDePercusion(): String
            +getAltura(): double
        }

        class InstrumentoViento{
            +InstrumentoViento(nombreInstrumento: String, materialDeConstruccion: String, codigo: String, precio: int, stock: int)
        }

    }
    package services{
        interface Sistema <<Interface>>{
            +cargarInformacion(): void
            +guardarInformacion(): void
            +desplegarInformacion(): void
            +venderInstrumento(): void
            +agregarInstrumento(): void
            +buscarInstrumentoCuerda(codigo: String): Instrumento
            +buscarInstrumentoPercusion(codigo: String): Instrumento
            +buscarInstrumentoViento(codigo: String): Instrumento
        }
        class SistemaImpl{
            +SistemaImpl(): void
            +cargarInformacion(): void
            +guardarInformacion(): void
            +desplegarInformacion(): void
            +venderInstrumento(): void
            +agregarInstrumento(): void
            +buscarInstrumentoCuerda(codigo: String): Instrumento
            +buscarInstrumentoPercusion(codigo: String): Instrumento
            +buscarInstrumentoViento(codigo: String): Instrumento


        }
    }
}

SistemaImpl ..|> Sistema
InstrumentoCuerda "0..*" --> "1" ListaInstrumento
InstrumentoPercusion "0..*" --> "1" ListaInstrumento
InstrumentoViento "0..*" --> "1" ListaInstrumento
SistemaImpl *-> InstrumentoPercusion
SistemaImpl *-> InstrumentoCuerda
SistemaImpl *-> InstrumentoViento

@enduml
